# Bluetooth_Bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  version.txt
main/: CMakeLists.txt  device_config.h  esp_hid_device_main.c  esp_hid_gap.c  esp_hid_gap.h  idf_component.yml  pair_mode.c  pair_mode.h  usb_host_mouse.c  usb_host_mouse.h  ws2812_led.c  ws2812_led.h
